--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                          <img src="assets/images/logo-122x122.png" alt="NAMELESS ROM" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com"><span class="mbri-close mbr-iconfont mbr-iconfont-btn"></span>NAMELESS ROM</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://forum.xda-developers.com/member.php?u=5750672" target="_blank"><span class="mbri-close mbr-iconfont mbr-iconfont-btn"></span>NAMELESS ROM</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -208,7 +208,7 @@
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7">Donate</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       This Rom is free to users but if your like you can donate :)</p>
+                       This Rom is free to users but if your like you can donate :)<br><br></p>
                     <div class="mbr-section-btn text-center">
                         <a href="https://mobirise.co" class="btn btn-secondary display-4">
                             More
@@ -230,7 +230,7 @@
         <div class="media-container-row">
             <div class="col-md-8 align-center">
                 <h2 class="pb-3 mbr-fonts-style display-2">
-                    FOLLOW NAMELESS</h2>
+                    FOLLOW NAMELESS..!</h2>
                 <div class="social-list pl-0 mb-0">
                     <a href="https://twitter.com/mobirise" target="_blank">
                         <span class="px-2 socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
