--- a/page1.html
+++ b/page1.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section once="footers" class="cid-rnut8EmfiO" id="footer6-e">
+<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section once="footers" class="cid-rnut8EmfiO" id="footer6-e">
 
     
 
